# aoc2020

./: Cargo.toml  README.md
src/: aoc_result.rs  args.rs  error.rs  lib.rs  main.rs  option_ext.rs  vec_ext.rs
src/error/: io_error.rs  parse_int_error.rs
src/exercises/: day_01.rs  day_02.rs
src/exercises/day_01/: part_1.rs  solution.rs
src/exercises/day_02/: solution.rs
src/exercises/day_03/: solution.rs
src/exercises/day_04/: solution.rs
src/exercises/day_05/: solution.rs
src/exercises/day_06/: solution.rs
src/exercises/day_07/: solution.rs
