[package]
name = "modulitos_2020"
version = "0.1.0"
authors = ["modulitos <modulitos@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
thiserror = "1.0.22"
regex = "1.4.2"
lazy_static = "1.4.0"
